--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@ body {
     background-color:black;
 }
 
+.logo img {
+    width: 80px;
+}
+
 .sidebar {
     position: fixed;
     top: 0;
@@ -41,6 +45,39 @@ body {
     font-family: "DM Sans", sans-serif;
 }
 
-.logo img {
-    width: 80px;
+.library {
+    position: fixed;
+    top: 180px;
+    left: 0;
+    bottom: 0;
+    padding: 12px;
+    width: 300px;
 }
+
+.library__navigation {
+    background-color: #121212;
+    border-radius: 8px;
+    padding: 16px 0 0 16px;
+}
+
+.library nav ul {
+    margin-top: 10px;
+    padding: 0 20px 10px 20px;
+}
+
+.library ul li {
+    padding: 10px 0;
+}
+
+.library nav ul li a {
+    color: #b3b3b3;
+    text-decoration: none;
+    font-weight: 600;
+    font-weight: 14px;
+    font-family: "DM Sans", sans-serif;
+}
+
+.fa-plus {
+    margin-left: 90px;
+}
+
