--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,8 @@
-body {
+body{
     background-color:black;
 }
 
-.logo img {
-    width: 80px;
-}
-
-.sidebar {
+.sidebar{
     position: fixed;
     top: 0;
     left: 0;
@@ -15,17 +11,21 @@ body {
     width: 300px;
 }
 
-.sidebar__navigation {
+.sidebar__navigation{
     background-color: #121212;
     border-radius: 8px;
     padding: 16px 0 0 16px;
 }
 
-.sidebar__navigation .logo {
-    background: #121212;
+.logo{
+    background-color: #121212;
     display: flex;
     border-radius: 8px;
     padding: 16px 0 0 16px;
+}
+
+.sidebar__navigation .logo img{
+    width: 80px;
 }
 
 .sidebar nav ul {
@@ -45,39 +45,174 @@ body {
     font-family: "DM Sans", sans-serif;
 }
 
-.library {
-    position: fixed;
-    top: 180px;
-    left: 0;
-    bottom: 0;
-    padding: 12px;
-    width: 300px;
-}
-
-.library__navigation {
+.library{
     background-color: #121212;
     border-radius: 8px;
-    padding: 16px 0 0 16px;
-}
-
-.library nav ul {
-    margin-top: 10px;
-    padding: 0 20px 10px 20px;
-}
-
-.library ul li {
-    padding: 10px 0;
-}
-
-.library nav ul li a {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 4px 8px;
     color: #b3b3b3;
-    text-decoration: none;
     font-weight: 600;
-    font-weight: 14px;
+    font-size: 14px;
+    margin-top: 10px;        
+}
+
+.library .library__content{    
+    display: flex;
+    justify-content: space-between;
+}
+
+.library .library__button{
+    display: flex;
+    margin-right: 10px;
+    color: #b3b3b3;
+    background-color: transparent;
+    border: 0px;
+    font-size: 14px;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    text-align: center;
+    text-decoration: none;
+    text-transform: none;
+    padding: 20px 10px;
+}
+
+.library .library__button .fa{
+    font-size: 20px;
+    font-weight: 300;
+    color: #b3b3b3;
+    margin-right: 10px;
+    padding-right: 8px;
+}
+
+.library .library__content .fa-plus{
+    margin: 24px 10px;
+}
+
+.section-playlist{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    border-radius: 10px;
+    gap: 20px;
+    color: #b3b3b3;
+    font-weight: 600;
+    font-size: 14px;
+    font-family: "DM Sans", sans-serif;
+    margin: 8px 0px;
+    padding: 16px 20px;
+    background-color: #242424;
+}
+
+.section-playlist .section-playlist__content{
+    display: flex;
+    flex-direction: column;
+}
+
+.section-playlist__content .text{
+    padding-bottom: 14px;
+    color: #fff;
+}
+
+.section-playlist__content .title{
+    font-weight: 700;
+}
+
+.section-playlist__content .subtitle{
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.section-playlist__content .section-playlist__button{
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+    color: #000;
+    border-radius: 20px;
+    font-size: 12px;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    text-decoration: none;
+    text-transform: none;
+    padding: 10px;
+    margin-top: 12px;
+    border: 0px;
+    width: 113px;
+    cursor: pointer;
+    
+}
+
+.sidebar .cookies{
+    margin: 25px 25px;
+}
+
+.sidebar .cookies a{
+    color: #b3b3b3;
+    font-weight: 500;
+    font-size: 12px;
+    text-decoration: none;
+}
+
+.sidebar .cookies a:hover {
+    color: #fff;
+    text-decoration: underline;
+}
+
+.languages .languages__button{
+    align-items: center;
+    background-color: transparent;
+    border: 1px solid #878787;
+    border-radius: 20px;
+    color: #fff;
+    cursor: pointer;
+    font-weight: bold;
+    width: 170px;
+    margin: 8px;
+    padding: 8px;
+}
+
+.disclaimer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: linear-gradient(to right, #101926, #2bdefd);
+    padding: 15px 40px;
+    display: flex;
+    justify-content: space-between;
     font-family: "DM Sans", sans-serif;
 }
 
-.fa-plus {
-    margin-left: 90px;
+.disclaimer .text{
+    flex-shrink: 0;
 }
+
+.disclaimer .disclaimer__title{
+    color: #ffffff;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 12px;
+    margin-bottom: 10px;
+}
+
+.disclaimer .disclaimer__subtitle{
+    color: #ffffff;
+    font-weight: 500;
+    font-size: 14px;
+}
+
+.disclaimer .button{
+    background-color: #ffffff;
+    color: #000000;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 14px 30px;
+    border: 0px;
+    border-radius: 40px;
+    cursor: pointer;
+    flex-shrink: 0;
+}
+
+
 
